test/expected/declare_fvx_v.out
declare f as function (x as void) returning void
                            ^
29: error: named parameters can not be void
